Footer Alignment FIXED

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ section {
 }
 
 blockquote {
-  /* background: var(--dark-bg); */
   margin: 0 0.5;
   padding: 1;
   grid-column: 1 / -1;
@@ -74,8 +73,6 @@ blockquote {
 }
 
 blockquote p {
-  color: black;
-  /* background-color: white; */
   font-size: 4rem;
   display: inline;
   line-height: 1;
@@ -85,16 +82,23 @@ blockquote p {
   grid-column: 1 / -1;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 
 /* Style for social icons */
 .social-icons {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .social-icons a {
-  margin: 0 1rem;
+  margin: 0 10px;
   font-size: 2.5rem;
   color: #333;
   text-decoration: none;
